--- a/Module-1-git/03-git-Conflict-Resolution/examples/02-bio-with-css/index.html
+++ b/Module-1-git/03-git-Conflict-Resolution/examples/02-bio-with-css/index.html
@@ -9,8 +9,8 @@
   <body>
     <header>
       <h1 class="title">BIOGRAPHY</h1>
-      <h2>we did some</h2>
-      <h3>upstream and origin git-ting</h3>
+      <h2>we are editing this document</h2>
+      <h3>the document has now been edited</h3>
       <h2>OTHER H2</h2>
     </header>
 
